tests/compile-fail/dangling_pointers/stack_temporary.stderr
error: Undefined Behavior: pointer to alloc957 was dereferenced after this allocation got freed
  --> $DIR/stack_temporary.rs:11:19
   |
LL |         let val = *x; //~ ERROR dereferenced after this allocation got freed
   |                   ^^ pointer to alloc957 was dereferenced after this allocation got freed
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/stack_temporary.rs:11:19

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

